# ob_tools

./: CMakeLists.txt  Claude.txt  README.md  data_collector.cpp  sync_analyzer.cpp  timestamp_sync_check.cpp  visualize_sync.py  ~$【G305&G305g】对外测试报告V1.0.xlsx
OrbbecSDK_ROS2/: README.MD  README_CN.MD
OrbbecSDK_ROS2/orbbec_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml
OrbbecSDK_ROS2/orbbec_camera/src/: ob_camera_node.cpp
OrbbecSDK_ROS2/orbbec_camera_msgs/: CHANGELOG.rst
OrbbecSDK_ROS2/orbbec_description/: CHANGELOG.rst
OrbbecSDK_ROS2/orbbec_description/urdf/: astra_2.urdf.xacro  gemini_2.urdf.xacro  gemini_2_L.urdf.xacro  gemini_335_L_336_L.urdf.xacro
docs/superpowers/plans/: 2026-07-09-refactor-into-class.md  2026-07-10-pairwise-sync-check.md  2026-07-14-ros2-multi-camera-sync-plan.md  2026-07-15-ros2-sync-tool-fix-plan.md
docs/superpowers/specs/: 2025-07-14-ros2-multi-camera-sync-design.md  2026-07-09-refactor-into-class-design.md  2026-07-10-pairwise-sync-check-design.md  2026-07-14-ros2-multi-camera-sync-design.md  2026-07-15-ros2-sync-tool-fix-design.md
ros2_sync_tool/: CMakeLists.txt  package.xml
ros2_sync_tool/config/: cameras.yaml
ros2_sync_tool/launch/: multi_camera_sync.launch.py  sync_analyzer.launch.py
ros2_sync_tool/src/: frame_stamp.h  ros2_sync_analyzer_node.cpp  sync_analyzer_core.cpp  sync_analyzer_core.h
src/: data_collector.h  frame_stamp.h  main.cpp  sync_analyzer.h
