<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_sync_tool</name>
  <version>0.1.0</version>
  <description>Multi-camera timestamp sync analysis tool using OrbbecSDK ROS2</description>
  <maintainer email="leju@example.com">leju</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <!-- orbbec_camera 是运行时依赖（topic 类型用 sensor_msgs 标准消息），非编译依赖 -->
  <!-- <depend>orbbec_camera</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>